syntax = "proto3";

package votings_service;

message ServiceConfig {
  repeated string api_public_keys = 1;
}
